# course_project_1

./: .env.example  .flake8  README.md  main.py  pyproject.toml  requirements.txt  user_settings.json
data/: operations.csv
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py
